deploy/k8s/21-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gophprofile-worker
  namespace: gophprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gophprofile-worker
  template:
    metadata:
      labels:
        app: gophprofile-worker
    spec:
      containers:
        - name: worker
          image: gophprofile:a466efd
          command: [ "/usr/local/bin/gophprofile-worker" ]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9091
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 256Mi
