deploy/k8s/13-jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: gophprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.76.0
          ports:
            - name: otlp-http
              containerPort: 4318
            - name: ui
              containerPort: 16686
          readinessProbe:
            httpGet:
              path: /
              port: ui
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: gophprofile
spec:
  selector:
    app: jaeger
  ports:
    - name: otlp-http
      port: 4318
    - name: ui
      port: 16686
