deploy/k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gophprofile
  namespace: gophprofile
spec:
  ingressClassName: traefik
  rules:
    - host: gophprofile.192.168.88.37.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gophprofile
                port:
                  number: 8080
    - host: jaeger.192.168.88.37.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
